Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.8.2 - 2/7/2013 - Aaron
----------------------------------------------------------------------
- Add mp_product_sku() template function
- Fix css class on product images
- Fix being unable to overwrite shipping information fields with a blank value 
- Fix grid bug when no styles are loaded http://wp.mu/h7
- Show all gateways to super admins in multisite (avoid confusion)

2.8.1 - 1/21/2013 - Aaron
----------------------------------------------------------------------
- Add very beta Fedex shipping module
- Fix php warning when marking as shipped
- Fix missing orders export box on All orders page: http://wp.mu/ee
- Small fixes to css styles for external links

2.8 - 1/15/2013 - Aaron, Arnold, Cole, Enzo
----------------------------------------------------------------------
- Added UPS Shipping plugin!
- Added built in grid views!
- Add in AJAX dropdown category and order filters to listings pages
- Add optional breadcrumbs to checkout process steps
- Add default product images
- Added ability to trash/delete orders and adjusts stock counts accordingly
- Add featured image import support to the CSV importer
- Add a "clone product" functionality
- Add hooks for custom shipping methods and tracking links
- Major refresh of css styles
- Forced shipping option recalculation when Country changes.
- Fix php warning on category list page old menus
- Fix bug with product list widget when ordering by price or sales
- Fix missing closing tag in global widget breaking drag and drop
- Fix shipping settings save filter for method plugins: http://wp.mu/d7
- Error check in Manual Payments gateway: http://premium.wpmudev.org/forums/topic/bug-with-manual-payment
- Fixed 10525 Paypal errors in global cart checkouts