@@ -8,10 +8,13 @@ Change Log:
 2.8.2 - 2/7/2013 - Aaron
 ----------------------------------------------------------------------
 - Add mp_product_sku() template function
+- Add settings to disable sales tax on digital products if desired
+- Add option to draft products when out of stock
 - Fix css class on product images
 - Fix being unable to overwrite shipping information fields with a blank value 
 - Fix grid bug when no styles are loaded http://wp.mu/h7
 - Show all gateways to super admins in multisite (avoid confusion)
+- Pass messages through wpautop()
 
 2.8.1 - 1/21/2013 - Aaron
 ----------------------------------------------------------------------
